--- a/_data/education.yml
+++ b/_data/education.yml
@@ -23,7 +23,7 @@
 - school: "Liceo Scientifico Socrate"
   degree: "High School"
   field: "Scientific Studies"
-  start_date: 2015
-  end_date: 2020
+  start_date: "2015"
+  end_date: "2020"
   city: Rome
   state: IT
