--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,6 @@
 - employer: "Sapienza University of Rome"
   job_title: "Graduate Researcher (with research scholarship)"
-  start_date: 2023
+  start_date: "2023"
   end_date: 2025/01
   city: Rome
   state: IT
