Add mobile and cnr

--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,4 +1,4 @@
-- current_activity: <p>I am currently pursuing a <b>Master's degree in Cybersecurity</b> @ <a class="link"
+- current_activity: <p>I am currently pursuing a <b>Master's Degree in Cybersecurity</b> @ <a class="link"
                         href="https://www.uniroma1.it" target="_blank" rel="noopener noreferrer">Sapienza
                         University of Rome</a>, where I am also a <b>Graduate Researcher</b> @ Computer Science Department.</p>
                         <p>
