Change to eng cnr link

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -56,5 +56,5 @@
     - title: Disinformation
     - title: Social Bots
     - title: LLMs   
-  other: 'PI: Senior Researcher <a class="link" id="prof" href="https://www.iit.cnr.it/marinella.petrocchi/" target="_blank" rel="noopener noreferrer">Marinella Petrocchi</a>'
+  other: 'PI: Senior Researcher <a class="link" id="prof" href="https://www.iit.cnr.it/en/marinella.petrocchi/" target="_blank" rel="noopener noreferrer">Marinella Petrocchi</a>'
      
